networking/ingress/manifests/ingress-resources/ingress-all-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  defaultBackend:
    service:
      name: backend
      port:
        number: 8080
