networking/ingress/manifests/ingress-resources/ingress-path-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
spec:
  defaultBackend:
    service:
      name: app1-backend
      port: 8080
 rules:
   - http:
       paths:
         - path: /app1
           backend:
             service:
               name: app1-backend
               port:
                 number: 8080
         - path: /app2
           backend:
             service:
               name: app2-backend
               port:
                number: 8080
